--- a/webui/index.html
+++ b/webui/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
 </head>
 <body>
-<div id="login"></div>
+<div id="main"></div>
 
 <script src="/bootstrap/js/bootstrap.bundle.js"></script>
 <script type="module" src="/src/main.js"></script>
